<resources>
    <string name="app_name">Tailor Management System</string>
    <string name="AddNewOrderButtonText">Add New Order</string>
    <string name="AllCustomersButtonText">All Customers</string>
    <string name="OrderManagementButtonText">Order Management</string>
    <string name="OrderSummaryButtonText">Order Summary</string>
    <string name="AboutUsButtonText">About Us</string>
    <string name="CustomerRegButtonText">Customer Registration</string>
    <string name="CustomerRegistrationTitle">Customer Registration</string>
    <string name="PhoneNumberHint">Phone Number (e.g. 03461232122)</string>
    <string name="AddressHint">Address</string>
    <string name="NameHint">Name</string>
    <string name="RegisterButton">Register</string>
    <string name="Measurements">Measurements (Inch)</string>
    <string name="Pending">Pending</string>
    <string name="Completed">Completed</string>
    <string name="Delivered">Delivered</string>
    <string name="OrderId">Order Id</string>
    <string name="No">No.</string>
    <string name="Name">Name</string>
    <string name="DeliveryDate">Delivery Date:</string>
    <string name="Adress">Adress</string>
</resources>