<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderManagementAct">

    <Button
        android:id="@+id/order_management_pending_button"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/Pending"
        android:onClick="DisplayPendingOrder"
        app:layout_constraintEnd_toStartOf="@+id/order_management_completed_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/order_management_completed_button"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/Completed"
        android:onClick="DisplayCompletedOrder"
        app:layout_constraintEnd_toStartOf="@+id/order_management_delivered_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/order_management_pending_button"
        app:layout_constraintTop_toTopOf="@+id/order_management_pending_button" />

    <Button
        android:id="@+id/order_management_delivered_button"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:onClick="DisplayDeliveredOrder"
        android:text="@string/Delivered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/order_management_completed_button"
        app:layout_constraintTop_toTopOf="@+id/order_management_completed_button" />

    <TextView
        android:id="@+id/orderManagmentTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/OrderId"
        app:layout_constraintEnd_toStartOf="@+id/orderManagmentTextView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_management_pending_button" />

    <TextView
        android:id="@+id/orderManagmentTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/No"
        app:layout_constraintEnd_toStartOf="@+id/orderManagmentTextView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/orderManagmentTextView1"
        app:layout_constraintTop_toTopOf="@+id/orderManagmentTextView1" />

    <TextView
        android:id="@+id/orderManagmentTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        app:layout_constraintEnd_toStartOf="@+id/orderManagmentTextView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/orderManagmentTextView2"
        app:layout_constraintTop_toTopOf="@+id/orderManagmentTextView2" />

    <TextView
        android:id="@+id/orderManagmentTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeliveryDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/orderManagmentTextView3"
        app:layout_constraintTop_toTopOf="@+id/orderManagmentTextView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderManagmentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/orderManagmentTextView1"
        tools:layout_editor_absoluteX="-14dp" />

</androidx.constraintlayout.widget.ConstraintLayout>